--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
     "lint": "eslint src tests --ext .ts",
     "lint:fix": "eslint src tests --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "@colyseus/testing": "^0.15.4",
+    "@playwright/test": "^1.40.0",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
