--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=2567
+      - DEBUG=cards:*
     command: npm run start:dev
     networks:
       - cards-network
