Phase 3: Game Room Framework + Full Frontend (#4)
* test: add GameRoom abstract class with comprehensive tests

- Add GameRoom abstract base class for pluggable game engines
- Add IGameEngine interface for game logic separation
- Add BaseGameState schema for game state management
- Add GamePlayer schema for player state in games
- Update metrics to track game-specific metrics with labels
- All tests pass (29/29)

Implements Phase 3 Commit 1: Base GameRoom Abstract Class

* test: add comprehensive tests for IGameEngine and schemas

- Add BaseGameState schema tests (21 tests)
- Add GamePlayer schema tests (14 tests)
- Add IGameEngine interface tests (25 tests)
- All tests pass (60/60 total)
- Tests cover initialization, player management, status transitions
- Tests cover game lifecycle and schema serialization

Implements Phase 3 Commit 2: IGameEngine Interface & Base GameState tests

* feat: add Snap game state and engine with tests

- Add SnapGameState schema extending BaseGameState
- Add SnapCard schema for network-synchronized cards
- Add PlayerHand wrapper schema for managing card hands
- Add SnapEngine implementing IGameEngine interface
- Integrates with existing Deck utility for card dealing
- All tests pass (57/57: 31 SnapGameState + 26 SnapEngine)

Features:
- Card playing with turn management
- Snap detection and pile awarding
- Penalty system for incorrect snaps
- Game over detection when one player has all cards
- Full game lifecycle support

Implements Phase 3 Commit 3: Snap Game State & Engine

* feat: add SnapRoom with server integration

- Add SnapRoom extending GameRoom for Snap game
- Implement message handlers for play_card and snap actions
- Register SnapRoom with Colyseus server
- Handle game initialization, card dealing, and turn management
- Broadcast game events to all clients (card_played, snap_success, snap_fail)
- All unit tests pass (10/10)

Integration:
- Connects GameRoom, SnapEngine, and SnapGameState
- Auto-starts game when 2 players jo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=2567
+      - DEBUG=cards:*
     command: npm run start:dev
     networks:
       - cards-network
@@ -25,6 +26,21 @@ services:
       - .:/app
       - /app/node_modules
     command: npm test
+    networks:
+      - cards-network
+
+  # E2E test runner with Playwright
+  e2e:
+    image: mcr.microsoft.com/playwright:v1.57.0-noble
+    working_dir: /app
+    volumes:
+      - .:/app
+    environment:
+      - BASE_URL=http://server:2567
+      - CI=true
+    command: sh -c "npm install && npx playwright test"
+    depends_on:
+      - server
     networks:
       - cards-network
 
